
      \item \code{dgeom()} is more accurate now, notably when its result is
      very small, fixing \PR{18642} thanks to the proposal of Morten Welinder,
      also improving other instances where C level \code{binom_raw(x, n, ..)}
      has \code{x == 0} or \code{x== n}.

      \item \pkg{tools}\code{:: startDynamicHelp()} now ensures \code{port}
      is in proper range, fixing \PR{18645}.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.3.2 patched}{

  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{iconv()} now fixes up variant encoding names such as
      \code{"utf8"} case-insensitively.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item The legacy \code{encoding = "MacRoman"} is deprecated in
      \code{pdf()} and \code{postscript()}: support was incomplete in
      earlier versions of \R.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Arguments are now properly forwarded to methods on S4 generics
      with \dots{} in the middle of their formal arguments. This was
      broken for the case when a method introduced an argument but did
      not include \dots{} in its own formals. Thanks to Hervé Pagès for
      the report \PR{18538}.

      \item Some invalid \code{file} arguments to \code{pictex()},
      \code{postscript()} and \code{xfig()} opened a file called
      \samp{NA} rather than throw an error.  These included
      \code{postscript(NULL)} (which some people expected to work like
      \code{pdf(NULL)}).

      \item Passing \code{filename = NA} to \code{svg()}, \code{cairo_pdf()},
      \code{cairo_ps()} or the Cairo-based bitmap devices opened a file
      called \samp{NA}: it now throws an error.

      \item \code{quartz(file = NA)} opened a file called \samp{NA}, including
      when used as a Quartz-based bitmap device.  It now gives an error.

      \item \code{rank(<long vector>)} now works, fixing \PR{18617}, thanks to
      Ilia Kats.
